--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -1,133 +1,140 @@
 <form class="{{cssClass}} flexcol" autocomplete="off">
 
     {{!-- Sheet Header --}}
-    {{!-- Nombre, foto y logo --}}
     <header class="sheet-header">
-        <div class="headroom">
-            <div class="centerBackground" style="position: absolute; clip-path: polygon(0 25%, 85% 25%, 100% 70%, 0% 70%); width: 110px; height: 55px; padding-left: 0.5em; top: -37px;">
-                <img class="logo-img" src="systems/eclipsephase/img/eclipse.png" title="ep2e logo"/>
-            </div>
-            <div>
-                <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}"/>
-            </div>
-            <div class="centerBackground" style="position: absolute; clip-path: polygon(0 20%, 90% 20%, 100% 100%, 0% 100%); bottom: 4px; padding-bottom: 0">
-                <input name="name" type="text" value="{{actor.name}}" placeholder="Name" style="width: auto; font-size: 20px; max-width: 250px; text-shadow: 0 0 5px #161616"/>
-            </div>
+        <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100"/>
+        <div class="header-fields">
+            <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Name"/></h1>
+            {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
+            use both the "grid" and "grid-Ncol" class where "N" can be any number
+            from 1 to 12 and will create that number of columns.  --}}
+            <div class="resources grid grid-2col">
+              {{!-- "flex-group-center" is also defined in the _grid.scss file
+              and it will add a small amount of padding, a border, and will
+              center all of its child elements content and text. --}}
+              <div class="resource flex-group-center">
+                  <label for="data.health.value" class="resource-label">Health</label>
+                  <div class="resource-content flexrow flex-center flex-between">
+                    <input type="text" name="data.health.value" value="{{data.health.value}}" data-dtype="Number"/>
+                    <span> / </span>
+                    <input type="text" name="data.health.max" value="{{data.health.max}}" data-dtype="Number"/>
+                  </div>
+              </div>
+              <div class="resource flex-group-center">
+                  <label for="data.power.value" class="resource-label">Power</label>
+                  <div class="resource-content flexrow flex-center flex-between">
+                    <input type="text" name="data.power.value" value="{{data.power.value}}" data-dtype="Number"/>
+                    <span> / </span>
+                    <input type="text" name="data.power.max" value="{{data.power.max}}" data-dtype="Number"/>
+                  </div>
+              </div>
+          </div>
+          {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
+          use both the "grid" and "grid-Ncol" class where "N" can be any number
+          from 1 to 12 and will create that number of columns.  --}}
+          <div class="abilities grid grid-3col">
+            {{#each data.abilities as |ability key|}}
+              <div class="ability flexrow flex-group-center">
+                <label for="data.abilities.{{key}}.value" class="resource-label">{{key}}</label>
+                <input type="text" name="data.abilities.{{key}}.value" value="{{ability.value}}" data-dtype="Number"/>
+                <span class="ability-mod rollable" data-roll="d20+@abilities.{{key}}.mod" data-label="{{key}}">{{numberFormat ability.mod decimals=0 sign=true}}</span>
+              </div>
+            {{/each}}
+          </div>
         </div>
     </header>
+
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
-        <a class="item" data-tab="ego">Ego</a>
-        <a class="item" data-tab="skills">Skills</a>
-        <a class="item" data-tab="body">Body</a>
-        {{#if actor.vehicle}}
-        <a class="item" data-tab="vehicles">Vehicles</a>
-        {{/if}}
-        <a class="item" data-tab="weapons">Inventory</a>
-        {{#if actor.aspect}}
-        <a class="item" data-tab="psi">Psi</a>
-        {{/if}}
+        <a class="item" data-tab="description">Description</a>
+        <a class="item" data-tab="items">Items</a>
+        <a class="item" data-tab="features">Features</a>
+        <a class="item" data-tab="spells">Spells</a>
     </nav>
-
 
     {{!-- Sheet Body --}}
     <section class="sheet-body">
-        {{!-- Ego Tab --}}
-        <div class="tab" data-group="primary" data-tab="history">
-            <div class="contentBox">
-                <div class="flexrow">
-                    <h3 class="subheader">Personal</h3>
-                    <div class="alignRight flexGrowThreeQuarter">
-                    </div>
-                </div>
-                <div class="itemBackground flexrow flex-group-center skills">
-                    <label class="input-large resource-label alignCenter" >Transfondo</label>
-                    <select class="selectSpecApt item-standard-margin-medium" name="data.ego.origin" data-type="String" >
-                        {{#select data.ego.origin}}
-                        {{#each config.origins as |origin key|}}
-                        <option value="{{origin}}">{{origin}}</option>
-                        {{/each}} {{/select}}
-                    </select>
-                    <label class="input-medium resource-label alignCenter" >Sex</label>
-                    <select class="selectSpecApt item-standard-margin-medium" name="data.ego.sex" data-type="String">
-                        {{#select data.ego.sex}}
-                        {{#each config.sexes as |sex key|}}
-                        <option value="{{sex}}">{{sex}}</option>
-                        {{/each}} {{/select}}
-                    </select>
-                    <label class="input-large resource-label alignCenter" >Gender</label>
-                    <select class="selectSpecApt item-standard-margin-medium" name="data.ego.gender" data-type="String">
-                        {{#select data.ego.gender}}
-                        {{#each config.genders as |gender key|}}
-                        <option value="{{gender}}">{{gender}}</option>
-                        {{/each}} {{/select}}
-                    </select>
-                </div>
-                <div class="itemBackground">
-                    <div class="flexrow flex-group-center">
-                        <label class="input-large resource-label alignLeft" >Motivations</label>
-                        <div class="flexrow">
-                            <input class="alignCenter" type="text" name="data.ego.motivations.motivation1" value='{{#if data.ego.motivations.motivation1}}{{data.ego.motivations.motivation1}} {{else}}{{/if}}' placeholder="e.g. Reach the horizon"/>
-                            <input class="alignCenter" type="text" name="data.ego.motivations.motivation2" value='{{#if data.ego.motivations.motivation2}}{{data.ego.motivations.motivation2}} {{else}}{{/if}}' placeholder="e.g. Reach the horizon"/>
-                            <input class="alignCenter" type="text" name="data.ego.motivations.motivation3" value='{{#if data.ego.motivations.motivation3}}{{data.ego.motivations.motivation3}} {{else}}{{/if}}' placeholder="e.g. Reach the horizon"/>
-                        </div>
-                    </div>
-                </div>
-                <div class="itemBackground flexrow flex-group-center skills">
-                    <label class="input-large resource-label" >Languages</label>
-                    <input type="text" name="data.ego.languages" value="{{data.ego.languages}}" placeholder="e.g. Hindi, Chinese, English"/>
-                </div>
-            </div>
-            <div class="flexrow flex-between">
-                <div class="contentBox" style="flex: 0.4">
-                    <div class="flexrow">
-                        <h3 class="subheader">Traits</h3>
-                        <div class="alignRight flexGrowHalf">
-                        </div>
-                    </div>
-                    <div class="itemBackground shape2">
-                        {{#if actor.trait}}
-                        {{#each actor.trait as |item id|}}
-                        <div class="item flexrow flex-group-center" data-item-id="{{item._id}}">
-                            <div class="item-image flex-group-left" style="flex: 0.2;"><i class="far fa-plus-square" style="color: #47ab30;"></i></div>
-                            <h4 class="item-name item-control item-edit noMargin hoverable"><strong>{{item.name}}</strong></h4>
-                            <div class="item-controls flex-group-right" style="flex: 0.2;">
-                                <a class="item-control item-delete" title="Delete Item"><i class="far fa-times-circle"></i></a>
-                            </div>
-                        </div>
-                        <div class="itemdescription" style="margin-bottom: 10px">
-                            <strong>Description:</strong> {{item.data.description}}
-                        </div>
-                        {{/each}}
-                        {{else}}
-                        <div class="flex-group-center">
-                            <label class="resource-label">You are traitless</label>
-                        </div>
-                        {{/if}}
-                    </div>
-                </div>
-                <div class="contentBox" style="flex: 0.15;">
-                    <div class="flexrow">
-                        <h3 class="subheaderBlank">Ego Flex</h3>
-                    </div>
-                    <div class="form-group listBackground noMargin shape5">
-                        <input type="number" name="data.ego.egoFlex" value="{{data.ego.egoFlex}}" data-dtype="Number" placeholder="0"/>
-                    </div>
-                </div>
-                <div class="contentBox" style="flex: 0.4">
-                    <div class="flexrow">
-                        <div class="alignRight flexGrowHalf">
-                        </div>
-                        <h3 class="subheaderMirror">Flaws</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="flexrow">
-                <h3 class="subheader">Additional Information</h3>
-                <div class="alignRight flexGrowThreeQuarter">
-                </div>
-            </div>
+
+        {{!-- Biography Tab --}}
+        <div class="tab biography" data-group="primary" data-tab="description">
             {{editor content=data.biography target="data.biography" button=true owner=owner editable=editable}}
         </div>
+
+        {{!-- Owned Items Tab --}}
+        <div class="tab items" data-group="primary" data-tab="items">
+            <ol class="items-list">
+                <li class="item flexrow item-header">
+                  <div class="item-image"></div>
+                  <div class="item-name">Name</div>
+                  <div class="item-controls">
+                    <a class="item-control item-create" title="Create item" data-type="item"><i class="fas fa-plus"></i> Add item</a>
+                  </div>
+                </li>
+            {{#each actor.gear as |item id|}}
+                <li class="item flexrow" data-item-id="{{item._id}}">
+                    <div class="item-image"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></div>
+                    <h4 class="item-name">{{item.name}}</h4>
+                    <div class="item-controls">
+                        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                    </div>
+                </li>
+            {{/each}}
+            </ol>
+        </div>
+
+        {{!-- Owned Features Tab --}}
+        <div class="tab features" data-group="primary" data-tab="features">
+            <ol class="items-list">
+                <li class="item flexrow item-header">
+                  <div class="item-image"></div>
+                  <div class="item-name">Name</div>
+                  <div class="item-controls">
+                    <a class="item-control item-create" title="Create item" data-type="feature"><i class="fas fa-plus"></i> Add item</a>
+                  </div>
+                </li>
+            {{#each actor.features as |item id|}}
+                <li class="item flexrow" data-item-id="{{item._id}}">
+                    <div class="item-image"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></div>
+                    <h4 class="item-name">{{item.name}}</h4>
+                    <div class="item-controls">
+                        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                    </div>
+                </li>
+            {{/each}}
+            </ol>
+        </div>
+
+        {{!-- Owned Spells Tab --}}
+        <div class="tab spells" data-group="primary" data-tab="spells">
+            <ol class="items-list">
+                <li class="item flexrow item-header">
+                  <div class="item-image"></div>
+                  <div class="item-name">Name</div>
+                  <div class="item-controls"></div>
+                </li>
+                {{#each actor.spells as |spells spellLevel|}}
+                    <li class="item flexrow item-header">
+                      <div class="item-name">Level {{spellLevel}} Spells</div>
+                      <div class="item-controls">
+                        <a class="item-control item-create" title="Create item" data-type="spell" data-spell-level="{{spellLevel}}"><i class="fas fa-plus"></i> Add LVL {{spellLevel}}</a>
+                      </div>
+                    </li>
+                    {{#each spells as |item id|}}
+                        <li class="item flexrow" data-item-id="{{item._id}}">
+                            <div class="item-image"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></div>
+                            <h4 class="item-name">{{item.name}}</h4>
+                            <div class="item-controls">
+                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                            </div>
+                        </li>
+                    {{/each}}
+                {{/each}}
+            </ol>
+        </div>
+
     </section>
 </form>
+
